# Roobot-Over-IP

./: .gitignore  .gitmodules  README.md  ROIAll.md  ping.py  test.cpp
.github/workflows/: PRBuildTest.yml
GUIMonitor/: Monitor.py
Modules/: Platformio.md  common.ini
Modules/Actuator ROI Module/: README.md  platformio.ini
Modules/Actuator ROI Module/hardware/: Dual Quadrature Acutator Module Hardware.md
Modules/Actuator ROI Module/hardware/REV 1/: BOM_BaseModule_PCB-A_2025-02-13.csv  PickAndPlace_PCB-A_2025-02-13.xlsx
Modules/Actuator ROI Module/include/: Actuator.h  ActuatorContainer.h  ActuatorPID.h  ActuatorPinout.h  ActuatorSerialRead.h  ActuatorSerialRead.hpp  ActuatorTypes.h  LimitSwitch.h  PositionController.h  constants.h
Modules/Actuator ROI Module/include/EncoderDrivers/: EncoderDriverBase.h  FirgelliEncoder.h  PLoadRShiftEncoder.h
Modules/Actuator ROI Module/include/Encoders/: EncoderBase.h  EncoderContainer.h  EncoderDriverBase.h  FirgelliEncoder.h
Modules/Actuator ROI Module/include/MotorDrivers/: IBT2BinaryMotor.h  LengthController.h  MotorDriverBase.h  MotorDriverPid.h
Modules/Actuator ROI Module/lib/: ActuatorPID.h  ActuatorPinout.h  ActuatorSerialRead.hpp
Modules/Actuator ROI Module/src/: Actuator.cpp  ActuatorContainer.cpp  ActuatorPID.cpp  ActuatorSerialRead.cpp  LimitSwitch.cpp  PositionController.h  main.cpp  main.cpp.old
Modules/Actuator ROI Module/src/EncoderDrivers/: EncoderDriverBase.cpp  FirgelliEncoder.cpp  (+1 more)
Modules/Bootloader Burner/: README.md  platformio.ini
Modules/Bootloader Burner/src/: main.cpp
Modules/GPIO ROI Module/: .gitignore  README.md  platformio.ini
Modules/GPIO ROI Module/src/: main.cpp
Modules/ODrive ROI Module/: README.md  platformio.ini
Modules/ODrive ROI Module/hardware/: Odrive-REV-Module-Rev1-docs.md  Odrive-REV-Module-hardware-docs.md
Modules/ODrive ROI Module/include/: oDriveContainer.h  oDriveController.h  oDriveError.h
Modules/ODrive ROI Module/src/: main.cpp  main.cpp.ma  main.cpp.odrive  oDriveController.cpp  oDriveError.cpp
Modules/Template/: README.md  platformio.ini
Modules/Template/src/: main.cpp
Modules/lib/: README.md  chainNeighborManager.cpp  chainNeighborManager.h  macGen.cpp  macGen.h  statusManager.cpp  statusManager.h  supplyVoltage.cpp  supplyVoltage.h  sysAdminHandler.cpp  sysAdminHandler.h  udpServer.h
ROS/: CMakeLists.txt  InterfaceReadMe.md  README.md  ROS-Package-Readme.md  docker-compose.yml  package.xml
ROS/action/: ActuatorGotoAbsolutePosition.action  SendSerializedSysAdminPacket.action  TargetJointState.action
ROS/interface/: Actuator.md  GeneralGPIO.md  InterfaceReadMe.md  ODrive.md
ROS/launch/: 4_wheel_drive_example.xml  part_2_roi_launch.xml  roi_launch copy.xml  roi_launch.xml  wheel_drive_example.xml
ROS/lib/: transportAgent.cpp
ROS/lib/moduleVirtualizations/: GPIO.cpp  GPIO.h  headLight.h
ROS/libs/: transportAgent.cpp  transportAgent.h
ROS/libs/moduleVirtualizations/: GPIO.h  base.cpp  base.h
ROS/msg/: AngularMeasurement.msg  ConnectionState.msg  HeadLightState.msg  Health.msg  LinearMeasurement.msg  ODriveTemperature.msg  PinStates.msg  PinValues.msg  PinValues.msg.dep  Power.msg  SubDeviceIDConstant.msg  TransportAgent.msg
ROS/scripts/: netReceiver.py  netTransmitter.py  reliabilityManager.py  transportAgent.py
ROS/src/: Actuator.cpp  Actuator.h  GPIOModule.h  ModuleVirtualizationREADME.md  ODrive.cpp  ODrive.h  base.cpp  base.h  generalGPIO.cpp  generalGPIO.cpp.depracated  generalGPIO.h  main.cpp  main.cpp.old  publisher_member_function.cpp  transportAgent.cpp  transportAgent.h
ROS/src/interfaces/: CMakeLists.txt  package.xml
ROS/src/interfaces/msg/: GeneralGPIOModule.msg  HeadLightState.msg  SysPacket.msg
ROS/src/interfaces/srv/: PushModule.srv  RemoveModule.srv  SetPinMode.srv
ROS/src/moduleVirtualizations/: GPIO.cpp  base.h  headLight.cpp.old
ROS/srv/: ActuatorGotoPosition.srv  ActuatorGotoRelativePosition.srv  ActuatorSetVelocity.srv  GetInput.srv  GotoPosition.srv  ODriveGotoPosition.srv  ODriveGotoRelativePosition.srv  ODriveSetTorque.srv  ODriveSetVelocity.msg  QueueSerializedPacket.srv  SetHeadLight.srv  SetOutput.srv  SetPinMode.srv  SetPinOutput.srv  SetPinState.srv  SetPosition.srv  SetRelativePosition.srv  SetTorque.msg  SetVelocity.msg  TargetJointState.srv
SBC/: CMakeLists.txt
SBC - OUT OF DATE/: main.cpp
SBC - OUT OF DATE/lib/: transportAgent.h
SBC - OUT OF DATE/lib/moduleVirtualizations/: base.h
SBC - OUT OF DATE/src/: main.cpp  singleton.h
SBC/lib/: UnityTypes.hpp  UnityTypes.md  transportAgent.cpp  transportAgent.h
SBC/lib/moduleVirtualizations/: GPIO.cpp  GPIO.h  base.h
SBC/src/: whiskey.h
docs/: FrontLoader-Diagrams.md  Integration.md  OverviewROI.md  ProgrammingROI.md  c_cpp_properties.json
docs/dev-tools/: c_cpp_properties.json
docs/drawio/: ChainPacket.drawio  Eathernet Network.drawio  FrontLoader-Data-Flow.drawio  FrontLoader-Hardware-Overview.drawio  Packet.drawio  ROI Layers.drawio  ROI Topography.drawio  ROI-Module-Node.drawio  ROIDataflow.drawio  WholeSystem.drawio  inter-module-Electrical.drawio
lib/: CodecReadme.md  ModuleCodec.h  Packet.cpp  Packet.h  Packets.h  UnityTypes.h  UnityTypes.hpp  UnityTypes.md  floatCast.cpp  floatCast.h
lib/UDP-API/: OverviewReadme.md  actuator.h  actuator.md  generalGPIO.h  generalGPIO.md  moduleType.h  moduleTypes.md  oDrive.h  oDrive.md  packetTypes.h  sysAdmin.h  sysAdmin.md
lib/moduleLib/: IPContainer.cpp  IPContainer.h  IPWrapper.cpp  IPWrapper.h  ModuleReadme.md  blacklistManager.cpp  blacklistManager.h  chainNeighborManager.cpp  chainNeighborManager.h  debug.h  infrastructure.cpp  infrastructure.h  macGen.cpp  macGen.h  octetSelector.cpp  octetSelector.h  statusManager.cpp  statusManager.h  supplyVoltage.cpp  supplyVoltage.h  sysAdminHandler.cpp  sysAdminHandler.h
roi_interfaces/: CMakeLists.txt  package.xml
roi_interfaces/msg/: Health.msg  Packet.msg  SerializedPacket.msg
roi_interfaces/srv/: ActuatorGotoPosition.srv
testing/: guiTester.py  pingStatusReport.py  pingactvelocity.py  pingdrvvelocity.py  pinggeneralRead.py
(+14 files in other folders)
