<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?><package format="3">
    <name>roi_ros</name>
    <version>0.1.0</version>
    <description>The ROS integration with the Roobot Over IP Network</description>
    <maintainer email="UANasarobotics@uakron.edu">U Akron Lunabotics Team, uanasarobotics.org</maintainer>
    <license>Apache-2.0</license>
    <!--  -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <!-- Custom parameters -->
    <depend>rclcpp</depend>
    <depend>rclpy</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>rclcpp_action</depend>
<depend>builtin_interfaces</depend>
    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>
    <!-- custom interfaces -->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <!--  -->
    <export>
        <build_type>ament_cmake</build_type>
        <!--build_type>ament_cmake_python</build_type-->
    </export>
</package>